OSCACHE 2.0
-------------
Bug fixes:
- [CACHE-52] Fixed a problem that caused no output on Tomcat for small JSP files.
- [CACHE-55] JMS was throwing an exception on Weblogic.
- Altering the cache capacity on the fly using the administrator classes wasn't
  working correctly.

Improvements:
- Minor FastCronParser speedup.
- Made ClusterNotification constants public.
- Dropped some of the logging levels from INFO down to DEBUG.


OSCACHE 2.0 (beta 2)
-------------
New features:
- Now supports JavaGroups version 2.1.
- JMS Clustering support has been added [Romulus Pasca].
- Clustering code has been refactored. As a result of this, some of the
  clustering configuration has changed since beta 1 - please see the updated
  clustering documentation for details.
- Performance enhancement: When running under JRE 1.3.x, the LRUCache will
  now attempt to use the Jakarta commons collections SequencedHashMap. If the
  commons-collections.jar is not present then the code resorts to using a
  LinkedList and a warning is logged. Note that under JRE 1.4.x and higher the
  commons-collections.jar is not required.
- Config.getProperties() method added.

Bug fixes:
- [CACHE-45] Fixed a serialization bug.
- [CACHE-48] FastCronParser no longer requires JDK 1.4.x.
- The CachewideEvent was not holding the event date.
- Prevented an error from being logged in the CachewideEvent handling (even
  though no problem had occurred).
- Fixed a subtle bug in the concurrent unit test.
- The ServletCacheAdministrator's app scope cache is created on startup (via
  the CacheContextListener).


OSCACHE 2.0 (beta 1)
-------------
New features:
- [CACHE-11] Cache grouping support. This allows cache entries to be placed
  into an arbitrary group or groups and flushed with a single flushGroup()
  call.
- [CACHE-14, Matthias Nott] Now allows for content to be cached indefinitely
  without expiration.
- [CACHE-30] Added support for expiring cache entries based on a cron expression.