@@ -1,21 +1,6 @@
-# CACHE DIRECTORY
-#
-# This is the directory on disk where caches will be stored.
-# it will be created if it doesn't already exist, but OSache
-# must be able to write to here.
-#
-# If you want to disable file caching, just comment out or remove this line.
-# Note: for Windows machines, this needs \ to be escaped
-# ie Windows:
-# cache.path=c:\\myapp\\cache
-# or *ix:
-# cache.path=/opt/myapp/cache
-
-
 # CACHE IN MEMORY
 #
-# If you want to disable memory caching, just comment out or remove this line.
-# Note: disabling memory AND disk caching is possible but fairly stupid ;)
+# If you want to disable memory caching, just uncomment this line.
 #
 # cache.memory=false
 
@@ -42,6 +27,10 @@
 
 # CACHE LISTENERS
 #
+# These hook OSCache events and perform various actions such as logging
+# cache hits and misses, or broadcasting to other cache instances across a cluster.
+# See the documentation for further information.
+#
 # cache.event.listeners=com.opensymphony.oscache.plugins.clustersupport.JMSBroadcastingListener,  \
 #                       com.opensymphony.oscache.extra.CacheEntryEventListenerImpl,               \
 #                       com.opensymphony.oscache.extra.CacheMapAccessEventListenerImpl,           \
@@ -50,9 +39,28 @@
 
 # CACHE PERSISTENCE CLASS
 #
-# Specify the class to use for persistence.
+# Specify the class to use for persistence. If you use the supplied DiskPersistenceListener,
+# don't forget to supply the cache.path property to specify the location of the cache
+# directory.
+# 
+# If a persistence class is not specified, OSCache will use memory caching only.
 #
 # cache.persistence.class=com.opensymphony.oscache.plugins.diskpersistence.DiskPersistenceListener
+
+
+# CACHE DIRECTORY
+#
+# This is the directory on disk where caches will be stored by the DiskPersistenceListener.
+# it will be created if it doesn't already exist. Remember that OSCache must have
+# write permission to this directory.
+#
+# Note: for Windows machines, this needs \ to be escaped
+# ie Windows:
+# cache.path=c:\\myapp\\cache
+# or *ix:
+# cache.path=/opt/myapp/cache
+#
+# cache.path=c:\\app\\cache
 
 
 # CACHE ALGORITHM
@@ -61,19 +69,23 @@
 # the cache size must also be specified. If the cache size is not specified,
 # the cache algorithm will be Unlimited cache.
 #
+# cache.algorithm=com.opensymphony.oscache.base.algorithm.LRUCache
 # cache.algorithm=com.opensymphony.oscache.base.algorithm.FIFOCache
+# cache.algorithm=com.opensymphony.oscache.base.algorithm.UnlimitedCache
 
 
 # CACHE SIZE
 #
-# Default cache size in number of item. If a size is specified but not
+# Default cache size in number of items. If a size is specified but not
 # an algorithm, the cache algorithm used will be LRUCache.
 #
 cache.capacity=1000
 
 
 # CACHE UNLIMITED DISK
-# Use unlimited disk cache or not
+# Use unlimited disk cache or not. The default value is false, which means
+# the disk cache will be limited in size to the value specified by cache.capacity.
+#
 # cache.unlimited.disk=false
 
 
@@ -85,6 +97,7 @@ cache.capacity=1000
 #cache.cluster.jms.topic.factory=java:comp/env/jms/TopicConnectionFactory
 #cache.cluster.jms.topic.name=java:comp/env/jms/OSCacheTopic
 #cache.cluster.jms.node.name=node1
+
 
 # JAVAGROUPS CLUSTER PROPERTIES
 #
