@@ -1,6 +1,3 @@
-# CACHE DIRECTORY
-cache.path=/tmp/cachetagscache
-
 # LISTENERS
 cache.event.listeners=com.opensymphony.oscache.plugins.clustersupport.JavaGroupsBroadcastingListener
 
