@@ -1,6 +1,3 @@
-# CACHE DIRECTORY
-cache.path=/tmp/cachetagscache
-
 # CACHE IN MEMORY
 cache.memory=true
 
@@ -9,3 +6,6 @@ cache.capacity=100
 
 # CACHE PERSISTENCE CLASS
 cache.persistence.class=com.opensymphony.oscache.plugins.diskpersistence.DiskPersistenceListener
+
+# CACHE DIRECTORY
+cache.path=/tmp/cachetagscache
